--- a/package.json
+++ b/package.json
@@ -9,13 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.17.3",
+    "@react-native-community/clipboard": "^1.5.1",
+    "@react-native-masked-view/masked-view": "0.2.6",
+    "@react-navigation/bottom-tabs": "6.3.3",
+    "@react-navigation/native": "6.0.12",
+    "@react-navigation/native-stack": "6.9.0",
+    "@react-navigation/stack": "6.2.1",
+    "@twotalltotems/react-native-otp-input": "1.3.7",
+    "axios": "^1.1.3",
     "expo": "~47.0.6",
     "expo-status-bar": "~1.4.2",
+    "lottie-react-native": "^5.1.4",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-dotenv": "^3.4.2",
+    "react-native-gesture-handler": "2.4.1",
+    "react-native-phone-number-input": "^2.1.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "styled-components": "5.3.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
+    "typescript": "^4.6.3"
   },
   "private": true
 }
