--- a/package.json
+++ b/package.json
@@ -18,13 +18,22 @@
     "@react-navigation/stack": "6.2.1",
     "@twotalltotems/react-native-otp-input": "1.3.7",
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.3",
     "expo": "~47.0.6",
     "expo-status-bar": "~1.4.2",
+    "install": "^0.13.0",
     "lottie-react-native": "^5.1.4",
+    "npm": "^9.1.2",
     "react": "18.1.0",
+    "react-bootstrap": "^2.6.0",
     "react-native": "0.70.5",
+    "react-native-date-picker": "^4.2.6",
+    "react-native-datepicker": "^1.7.2",
     "react-native-dotenv": "^3.4.2",
+    "react-native-dropdown-select-list": "^2.0.2",
+    "react-native-form-component": "^2.6.1",
     "react-native-gesture-handler": "2.4.1",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
