--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.3",
     "expo": "~47.0.6",
+    "expo-firebase-recaptcha": "2.2.0",
     "expo-status-bar": "~1.4.2",
+    "firebase": "9.6.11",
     "install": "^0.13.0",
     "lottie-react-native": "^5.1.4",
     "npm": "^9.1.2",
@@ -37,6 +39,7 @@
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-webview": "11.22.2",
     "styled-components": "5.3.5"
   },
   "devDependencies": {
